# arabic_hate_speech_detection

./: .gitignore  CLEANUP_COMPLETED.md  CUDA_GUIDE.md  README.md  RESTRUCTURE_SUMMARY.md  config.json  main.py  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  config.yaml  default_config.yaml
data/combined/: test.csv  train.csv  val.csv
models/: .gitkeep
results/: .gitkeep
scripts/: README.md  __init__.py  build_combined_dataset.py  build_dataset.py  evaluate.py  resume_training.py  train.py
src/: __init__.py  config.py  dataset.py  evaluate.py  model.py  train.py  utils.py
src/arabic_hate_speech/: __init__.py
src/arabic_hate_speech/core/: __init__.py  config.py  losses.py  model.py
src/arabic_hate_speech/data/: __init__.py  dataset.py  preprocessing.py
src/arabic_hate_speech/evaluation/: __init__.py  evaluator.py  metrics.py
src/arabic_hate_speech/training/: __init__.py  callbacks.py  trainer.py
src/arabic_hate_speech/utils/: __init__.py  device.py  helpers.py  logging.py
tests/: __init__.py
